@@ -415,7 +415,7 @@ unsigned fl_utf8toUtf16(const char* src, unsigned srclen,
 unsigned fl_utf8towc(const char* src, unsigned srclen,
 		  wchar_t* dst, unsigned dstlen)
 {
-#ifdef _WIN32
+#ifdef WIN32
 	return fl_utf8toUtf16(src, srclen, (unsigned short*)dst, dstlen);
 #else
   const char* p = src;
@@ -541,7 +541,7 @@ unsigned fl_utf8fromwc(char* dst, unsigned dstlen,
       if (count+2 >= dstlen) {dst[count] = 0; count += 2; break;}
       dst[count++] = 0xc0 | (ucs >> 6);
       dst[count++] = 0x80 | (ucs & 0x3F);
-#ifdef _WIN32
+#ifdef WIN32
     } else if (ucs >= 0xd800 && ucs <= 0xdbff && i < srclen &&
 	       src[i] >= 0xdc00 && src[i] <= 0xdfff) {
       /* surrogate pair */
@@ -561,7 +561,7 @@ unsigned fl_utf8fromwc(char* dst, unsigned dstlen,
       dst[count++] = 0x80 | ((ucs >> 6) & 0x3F);
       dst[count++] = 0x80 | (ucs & 0x3F);
     } else {
-#ifndef _WIN32
+#ifndef WIN32
     J1:
 #endif
       /* all others are 3 bytes: */
@@ -578,7 +578,7 @@ unsigned fl_utf8fromwc(char* dst, unsigned dstlen,
       count++;
     } else if (ucs < 0x800U) { /* 2 bytes */
       count += 2;
-#ifdef _WIN32
+#ifdef WIN32
     } else if (ucs >= 0xd800 && ucs <= 0xdbff && i < srclen-1 &&
 	       src[i+1] >= 0xdc00 && src[i+1] <= 0xdfff) {
       /* surrogate pair */
@@ -644,7 +644,7 @@ unsigned fl_utf8froma(char* dst, unsigned dstlen,
   return count;
 }
 
-#ifdef _WIN32
+#ifdef WIN32
 # include <windows.h>
 #endif
 
@@ -663,7 +663,7 @@ unsigned fl_utf8froma(char* dst, unsigned dstlen,
 int fl_utf8locale(void) {
   static int ret = 2;
   if (ret == 2) {
-#ifdef _WIN32
+#ifdef WIN32
     ret = GetACP() == CP_UTF8;
 #else
     char* s;
@@ -699,7 +699,7 @@ unsigned fl_utf8to_mb(const char* src, unsigned srclen,
 		  char* dst, unsigned dstlen)
 {
   if (!fl_utf8locale()) {
-#ifdef _WIN32
+#ifdef WIN32
     wchar_t lbuf[1024];
     wchar_t* buf = lbuf;
     unsigned length = fl_utf8towc(src, srclen, buf, 1024);
@@ -775,8 +775,7 @@ unsigned fl_utf8from_mb(char* dst, unsigned dstlen,
 		    const char* src, unsigned srclen)
 {
   if (!fl_utf8locale()) {
-#ifdef _WIN32
-#warning _WIN32 alarm
+#ifdef WIN32
     wchar_t lbuf[1024];
     wchar_t* buf = lbuf;
     unsigned length;
