@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.3.0
 
+	- Replaced _WIN32 symbols that had come with UTF-8 and the
+	  new Fl_Table widget with WIN32
 	- Fixed a buffer overflow in fl_utf8from_mb() (STR #2279)
 	- Fixed a Windows GDI leak when testing alpha blending capabilities
 	- Fixed a name conflict with new (VS 2008 Express) winsock2.h
